--- a/ShoppingList.html
+++ b/ShoppingList.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Shopping List</title>
     <style>
         /* Basic styling */
@@ -85,7 +87,7 @@
         <!-- Your shopping list items will be added here -->
     </ul>
 
-    <
+    
     <script>
         // JavaScript code to handle adding, checking off, and deleting items
         const shoppingForm = document.getElementById('shopping-form');
